fix alignment of codeholder names

--- a/src/fe/features/pages/codeholders/table-fields.less
+++ b/src/fe/features/pages/codeholders/table-fields.less
@@ -37,6 +37,8 @@
     white-space: nowrap;
     justify-content: flex-start;
     max-width: 100%;
+    vertical-align: -webkit-baseline-middle;
+    vertical-align: -moz-middle-with-baseline;
 
     .honorific, .first-name, .last-name, .org-full-name, .org-abbrev {
         display: inline-block;
